// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`injectShadowAtEdges injects before and after statements 1`] = `
[
  {
    "assignments": [
      25,
    ],
    "declarations": [
      {
        "baseFunctions": [],
        "constant": false,
        "id": 25,
        "indexed": false,
        "mutability": "mutable",
        "name": "__checkpoint",
        "nameLocation": "142:12:0",
        "scope": 20,
        "src": "134:20:0",
        "stateVariable": false,
        "storageLocation": "default",
        "typeDescriptions": {
          "typeIdentifier": "t_uint256",
          "typeString": "uint256",
        },
        "typeName": {
          "id": 26,
          "name": "uint256",
          "nodeType": "ElementaryTypeName",
          "src": "134:7:0",
          "typeDescriptions": {
            "typeIdentifier": "t_uint256",
            "typeString": "uint256",
          },
        },
        "visibility": "internal",
      },
    ],
    "id": 24,
    "initialValue": {
      "argumentTypes": [],
      "id": 27,
      "name": "stored",
      "nodeType": "Identifier",
      "overloadedDeclarations": [],
      "referencedDeclaration": 3,
      "src": "157:6:0",
      "typeDescriptions": {
        "typeIdentifier": "t_uint256",
        "typeString": "uint256",
      },
    },
    "nodeType": "VariableDeclarationStatement",
    "src": "134:29:0",
  },
  {
    "expression": {
      "argumentTypes": [],
      "arguments": [
        {
          "argumentTypes": [],
          "commonType": {
            "typeIdentifier": "t_uint256",
            "typeString": "uint256",
          },
          "id": 30,
          "isConstant": false,
          "isLValue": false,
          "isPure": false,
          "lValueRequested": false,
          "leftExpression": {
            "argumentTypes": [],
            "id": 31,
            "name": "stored",
            "nodeType": "Identifier",
            "overloadedDeclarations": [],
            "referencedDeclaration": 3,
            "src": "142:6:0",
            "typeDescriptions": {
              "typeIdentifier": "t_uint256",
              "typeString": "uint256",
            },
          },
          "nodeType": "BinaryOperation",
          "operator": ">=",
          "rightExpression": {
            "argumentTypes": [],
            "id": 32,
            "name": "__checkpoint",
            "nodeType": "Identifier",
            "overloadedDeclarations": [],
            "referencedDeclaration": 25,
            "src": "152:12:0",
            "typeDescriptions": {
              "typeIdentifier": "t_uint256",
              "typeString": "uint256",
            },
          },
          "src": "142:22:0",
          "typeDescriptions": {
            "typeIdentifier": "t_bool",
            "typeString": "bool",
          },
        },
      ],
      "expression": {
        "argumentTypes": [
          {
            "typeIdentifier": "t_bool",
            "typeString": "bool",
          },
        ],
        "id": 33,
        "name": "require",
        "nodeType": "Identifier",
        "overloadedDeclarations": [
          -18,
          -18,
          -18,
        ],
        "referencedDeclaration": -18,
        "src": "134:7:0",
        "typeDescriptions": {
          "typeIdentifier": "t_function_require_pure$_t_bool_$returns$__$",
          "typeString": "function (bool) pure",
        },
      },
      "id": 29,
      "isConstant": false,
      "isLValue": false,
      "isPure": false,
      "kind": "functionCall",
      "lValueRequested": false,
      "names": [],
      "nodeType": "FunctionCall",
      "src": "134:31:0",
      "tryCall": false,
      "typeDescriptions": {
        "typeIdentifier": "t_tuple$__$",
        "typeString": "tuple()",
      },
    },
    "id": 28,
    "nodeType": "ExpressionStatement",
    "src": "134:31:0",
  },
  {
    "expression": {
      "argumentTypes": [],
      "id": 18,
      "name": "stored",
      "nodeType": "Identifier",
      "overloadedDeclarations": [],
      "referencedDeclaration": 3,
      "src": "243:6:0",
      "typeDescriptions": {
        "typeIdentifier": "t_uint256",
        "typeString": "uint256",
      },
    },
    "functionReturnParameters": 17,
    "id": 19,
    "nodeType": "Return",
    "src": "236:13:0",
  },
  {
    "expression": {
      "argumentTypes": [],
      "arguments": [
        {
          "argumentTypes": [],
          "commonType": {
            "typeIdentifier": "t_uint256",
            "typeString": "uint256",
          },
          "id": 36,
          "isConstant": false,
          "isLValue": false,
          "isPure": false,
          "lValueRequested": false,
          "leftExpression": {
            "argumentTypes": [],
            "id": 37,
            "name": "stored",
            "nodeType": "Identifier",
            "overloadedDeclarations": [],
            "referencedDeclaration": 3,
            "src": "142:6:0",
            "typeDescriptions": {
              "typeIdentifier": "t_uint256",
              "typeString": "uint256",
            },
          },
          "nodeType": "BinaryOperation",
          "operator": ">=",
          "rightExpression": {
            "argumentTypes": [],
            "id": 38,
            "name": "__checkpoint",
            "nodeType": "Identifier",
            "overloadedDeclarations": [],
            "referencedDeclaration": 25,
            "src": "152:12:0",
            "typeDescriptions": {
              "typeIdentifier": "t_uint256",
              "typeString": "uint256",
            },
          },
          "src": "142:22:0",
          "typeDescriptions": {
            "typeIdentifier": "t_bool",
            "typeString": "bool",
          },
        },
      ],
      "expression": {
        "argumentTypes": [
          {
            "typeIdentifier": "t_bool",
            "typeString": "bool",
          },
        ],
        "id": 39,
        "name": "require",
        "nodeType": "Identifier",
        "overloadedDeclarations": [
          -18,
          -18,
          -18,
        ],
        "referencedDeclaration": -18,
        "src": "134:7:0",
        "typeDescriptions": {
          "typeIdentifier": "t_function_require_pure$_t_bool_$returns$__$",
          "typeString": "function (bool) pure",
        },
      },
      "id": 35,
      "isConstant": false,
      "isLValue": false,
      "isPure": false,
      "kind": "functionCall",
      "lValueRequested": false,
      "names": [],
      "nodeType": "FunctionCall",
      "src": "134:31:0",
      "tryCall": false,
      "typeDescriptions": {
        "typeIdentifier": "t_tuple$__$",
        "typeString": "tuple()",
      },
    },
    "id": 34,
    "nodeType": "ExpressionStatement",
    "src": "134:31:0",
  },
]
`;

exports[`injectShadowAtEdges accepts snippet arrays 1`] = `
[
  {
    "assignments": [
      25,
    ],
    "declarations": [
      {
        "baseFunctions": [],
        "constant": false,
        "id": 25,
        "indexed": false,
        "mutability": "mutable",
        "name": "__checkpoint",
        "nameLocation": "142:12:0",
        "scope": 20,
        "src": "134:20:0",
        "stateVariable": false,
        "storageLocation": "default",
        "typeDescriptions": {
          "typeIdentifier": "t_uint256",
          "typeString": "uint256",
        },
        "typeName": {
          "id": 26,
          "name": "uint256",
          "nodeType": "ElementaryTypeName",
          "src": "134:7:0",
          "typeDescriptions": {
            "typeIdentifier": "t_uint256",
            "typeString": "uint256",
          },
        },
        "visibility": "internal",
      },
    ],
    "id": 24,
    "initialValue": {
      "argumentTypes": [],
      "id": 27,
      "name": "stored",
      "nodeType": "Identifier",
      "overloadedDeclarations": [],
      "referencedDeclaration": 3,
      "src": "157:6:0",
      "typeDescriptions": {
        "typeIdentifier": "t_uint256",
        "typeString": "uint256",
      },
    },
    "nodeType": "VariableDeclarationStatement",
    "src": "134:29:0",
  },
  {
    "assignments": [
      29,
    ],
    "declarations": [
      {
        "baseFunctions": [],
        "constant": false,
        "id": 29,
        "indexed": false,
        "mutability": "mutable",
        "name": "__second",
        "nameLocation": "177:8:0",
        "scope": 20,
        "src": "169:16:0",
        "stateVariable": false,
        "storageLocation": "default",
        "typeDescriptions": {
          "typeIdentifier": "t_uint256",
          "typeString": "uint256",
        },
        "typeName": {
          "id": 30,
          "name": "uint256",
          "nodeType": "ElementaryTypeName",
          "src": "169:7:0",
          "typeDescriptions": {
            "typeIdentifier": "t_uint256",
            "typeString": "uint256",
          },
        },
        "visibility": "internal",
      },
    ],
    "id": 28,
    "initialValue": {
      "argumentTypes": [],
      "id": 31,
      "name": "stored",
      "nodeType": "Identifier",
      "overloadedDeclarations": [],
      "referencedDeclaration": 3,
      "src": "188:6:0",
      "typeDescriptions": {
        "typeIdentifier": "t_uint256",
        "typeString": "uint256",
      },
    },
    "nodeType": "VariableDeclarationStatement",
    "src": "169:25:0",
  },
  {
    "expression": {
      "argumentTypes": [],
      "arguments": [
        {
          "argumentTypes": [],
          "commonType": {
            "typeIdentifier": "t_uint256",
            "typeString": "uint256",
          },
          "id": 34,
          "isConstant": false,
          "isLValue": false,
          "isPure": false,
          "lValueRequested": false,
          "leftExpression": {
            "argumentTypes": [],
            "id": 35,
            "name": "__second",
            "nodeType": "Identifier",
            "overloadedDeclarations": [],
            "referencedDeclaration": 29,
            "src": "142:8:0",
            "typeDescriptions": {
              "typeIdentifier": "t_uint256",
              "typeString": "uint256",
            },
          },
          "nodeType": "BinaryOperation",
          "operator": ">=",
          "rightExpression": {
            "argumentTypes": [],
            "id": 36,
            "name": "__checkpoint",
            "nodeType": "Identifier",
            "overloadedDeclarations": [],
            "referencedDeclaration": 25,
            "src": "154:12:0",
            "typeDescriptions": {
              "typeIdentifier": "t_uint256",
              "typeString": "uint256",
            },
          },
          "src": "142:24:0",
          "typeDescriptions": {
            "typeIdentifier": "t_bool",
            "typeString": "bool",
          },
        },
      ],
      "expression": {
        "argumentTypes": [
          {
            "typeIdentifier": "t_bool",
            "typeString": "bool",
          },
        ],
        "id": 37,
        "name": "require",
        "nodeType": "Identifier",
        "overloadedDeclarations": [
          -18,
          -18,
          -18,
        ],
        "referencedDeclaration": -18,
        "src": "134:7:0",
        "typeDescriptions": {
          "typeIdentifier": "t_function_require_pure$_t_bool_$returns$__$",
          "typeString": "function (bool) pure",
        },
      },
      "id": 33,
      "isConstant": false,
      "isLValue": false,
      "isPure": false,
      "kind": "functionCall",
      "lValueRequested": false,
      "names": [],
      "nodeType": "FunctionCall",
      "src": "134:33:0",
      "tryCall": false,
      "typeDescriptions": {
        "typeIdentifier": "t_tuple$__$",
        "typeString": "tuple()",
      },
    },
    "id": 32,
    "nodeType": "ExpressionStatement",
    "src": "134:33:0",
  },
  {
    "expression": {
      "argumentTypes": [],
      "id": 18,
      "name": "stored",
      "nodeType": "Identifier",
      "overloadedDeclarations": [],
      "referencedDeclaration": 3,
      "src": "243:6:0",
      "typeDescriptions": {
        "typeIdentifier": "t_uint256",
        "typeString": "uint256",
      },
    },
    "functionReturnParameters": 17,
    "id": 19,
    "nodeType": "Return",
    "src": "236:13:0",
  },
  {
    "expression": {
      "argumentTypes": [],
      "arguments": [
        {
          "argumentTypes": [],
          "commonType": {
            "typeIdentifier": "t_uint256",
            "typeString": "uint256",
          },
          "id": 40,
          "isConstant": false,
          "isLValue": false,
          "isPure": false,
          "lValueRequested": false,
          "leftExpression": {
            "argumentTypes": [],
            "id": 41,
            "name": "__second",
            "nodeType": "Identifier",
            "overloadedDeclarations": [],
            "referencedDeclaration": 29,
            "src": "142:8:0",
            "typeDescriptions": {
              "typeIdentifier": "t_uint256",
              "typeString": "uint256",
            },
          },
          "nodeType": "BinaryOperation",
          "operator": ">=",
          "rightExpression": {
            "argumentTypes": [],
            "id": 42,
            "name": "__checkpoint",
            "nodeType": "Identifier",
            "overloadedDeclarations": [],
            "referencedDeclaration": 25,
            "src": "154:12:0",
            "typeDescriptions": {
              "typeIdentifier": "t_uint256",
              "typeString": "uint256",
            },
          },
          "src": "142:24:0",
          "typeDescriptions": {
            "typeIdentifier": "t_bool",
            "typeString": "bool",
          },
        },
      ],
      "expression": {
        "argumentTypes": [
          {
            "typeIdentifier": "t_bool",
            "typeString": "bool",
          },
        ],
        "id": 43,
        "name": "require",
        "nodeType": "Identifier",
        "overloadedDeclarations": [
          -18,
          -18,
          -18,
        ],
        "referencedDeclaration": -18,
        "src": "134:7:0",
        "typeDescriptions": {
          "typeIdentifier": "t_function_require_pure$_t_bool_$returns$__$",
          "typeString": "function (bool) pure",
        },
      },
      "id": 39,
      "isConstant": false,
      "isLValue": false,
      "isPure": false,
      "kind": "functionCall",
      "lValueRequested": false,
      "names": [],
      "nodeType": "FunctionCall",
      "src": "134:33:0",
      "tryCall": false,
      "typeDescriptions": {
        "typeIdentifier": "t_tuple$__$",
        "typeString": "tuple()",
      },
    },
    "id": 38,
    "nodeType": "ExpressionStatement",
    "src": "134:33:0",
  },
]
`;
